# mandelplot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: main.rs
