[package]
name = "mandelplot"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Unbewohnte <me@unbewohnte.xyz>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
image = { version = "0.23.14", features = ["png", "rgb"]}
clap = "3.0.14"
